Tests/pass/variableNames.php
<?php
// Variables, whether global or class / local scope, should be all-lowercase with words separated by underscores. Do not use camelCaseNames.

class Foo {
	public $var_var;
	private $bar_var;
}
$some_variable = 'foo';
$another_variable = array( 'bar' );
$one_more = 0;
?>