Tests/fail/variableNames.php
<?php
// Variables, whether global or class / local scope, should be all-lowercase with words separated by underscores. Do not use camelCaseNames.

class Foo {
	public $Var_var;
	private $barVar;
}
$someVariable = 'foo';
$AnotherVariable = array( 'bar' );
$One_more = 0;
?>